# rsinfo

./: .gitignore  Cargo.toml  build.rs  const_to_struct.py
src/: lib.rs  main.rs
src/cargo/: mod.rs
src/cfg/: mod.rs  panic.rs  target_arch.rs  target_endian.rs  target_env.rs  target_family.rs  target_feature.rs  target_has_atomic.rs  target_os.rs  target_pointer_width.rs  target_vendor.rs
src/env/: mod.rs
src/source/: mod.rs
src/vergen/: mod.rs
