[package]
name = "rsinfo"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/delta4chat/rsinfo"
license = "Apache-2.0"
description = "Add `vergen` to your [build-dependencies], then get all build info in single struct."
documentation = "https://docs.rs/rsinfo"

[features]
default  = [ "json" ]
json = ["dep:serde_json"]

vergen          = ["dep:vergen"]
vergen-build    = ["vergen"]
vergen-cargo    = ["vergen"]
vergen-git      = ["vergen"]
vergen-gitoxide = ["vergen"]
vergen-rustc    = ["vergen"]
vergen-si       = ["vergen"]
vergen-all      = ["vergen-build", "vergen-cargo", "vergen-git", "vergen-gitoxide", "vergen-rustc", "vergen-si"]

[build-dependencies]
vergen = { optional = true, version = "8.3.1", features = ["build", "cargo", "git", "gitoxide", "rustc", "si"] }

[dependencies]
serde_json = { version = "1.0.114", optional = true, features = ["alloc"], default-features = false }

[[bin]]
name = "rsinfo"
path = "src/main.rs"
#required-features = ["vergen-all"]


